--- a/meet.css
+++ b/meet.css
@@ -1,5 +1,5 @@
-body{
-    font-family: 'Work Sans', sans-serif;
+body {
+  font-family: "Work Sans", sans-serif;
 }
 /* navbar section starts  */
 nav {
@@ -28,113 +28,180 @@ a.nav-link {
 }
 /* navbar section starts  */
 
-.meet-the-team-section{
-padding-left: 7em !important;
-padding-right: 7rem !important;
-padding-bottom: 3rem;
+.meet-the-team-section {
+  padding-left: 7em !important;
+  padding-right: 7rem !important;
+  padding-bottom: 3rem;
 }
-.meet-the-team{
-    margin-top: 2.5rem;
-    font-size: 3rem;
-    font-weight: 200;
+.meet-the-team {
+  margin-top: 2.5rem;
+  font-size: 3rem;
+  font-weight: 200;
 }
 
 /* <!-- main section starts here --> */
-.main-section{
-    background: #F4F4F5;
-    padding: 7rem !important;
-  
+.main-section {
+  background: #f4f4f5;
+  padding: 7rem !important;
 }
 
 /* first item section starts*/
-.first-item{
-    padding: 2rem 6rem;
+.first-item {
+  padding: 2rem 2rem;
 }
-.text-div{
-    color: #848D9C;
+.text-div {
+  color: #848d9c;
 }
-.line-through-div{
-    border-bottom:  1px solid #E5E5E5;
-    position: absolute;
-    bottom: 1.5rem;
-    padding-bottom: 1.7rem;
+.line-through-div {
+  border-bottom: 1px solid #e5e5e5;
+  position: absolute;
+  bottom: 1.5rem;
+  padding-bottom: 1.7rem;
 }
-.dev-name{
-   font-size: 1.5rem;
-   font-weight: 600;
-   line-height: 2rem;
-   letter-spacing: 2px;
-   
+.dev-name {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 2rem;
+  letter-spacing: 2px;
 }
-.founder{
-   letter-spacing: 2px;
-   color: #848D9C;
-   font-size: 1.3rem;
+.founder {
+  letter-spacing: 2px;
+  color: #848d9c;
+  font-size: 1.3rem;
 }
 /* first item section ends*/
 
-
 /* second item section starts*/
-.second-item{
-    margin-top: 6rem;
+.second-item {
+  margin-top: 6rem;
 }
-.grid-container{
-display: grid;
-grid-template-columns: auto auto;
-grid-gap: 3rem;
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 3rem;
 }
-.line-through-div-two{
-    border-bottom:  1px solid #E5E5E5;
-     bottom: 1rem !important;
-     padding-bottom: 1rem !important;
+.line-through-div-two {
+  border-bottom: 1px solid #e5e5e5;
+  bottom: 1rem !important;
+  padding-bottom: 1rem !important;
 }
-.line-through-div-three{
-    border-bottom:  1px solid #E5E5E5;
-     bottom: 1rem !important;
-     padding-bottom: 1rem !important;
+.line-through-div-three {
+  border-bottom: 1px solid #e5e5e5;
+  bottom: 1rem !important;
+  padding-bottom: 1rem !important;
 }
-.dev-name-one{
-   font-size: 1.5rem;
-   font-weight: 600;
-   line-height: 2rem;
-   letter-spacing: 2px;
-   
+.dev-name-one {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 2rem;
+  letter-spacing: 2px;
 }
-.dev-name-two{
-   font-size: 1.5rem;
-   font-weight: 600;
-   line-height: 2rem;
-   letter-spacing: 2px;  
+.dev-name-two {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 2rem;
+  letter-spacing: 2px;
 }
-.second-row{
-    padding: 2rem 3rem;
+.second-row {
+  padding: 2rem 3rem;
 }
-.second-one{
-background-color: #fff;
-padding: 3rem; 
+.second-one {
+  background-color: #fff;
+  padding: 3rem;
 }
-.second-two{
-background-color: #fff;
-padding: 3rem;
+.second-two {
+  background-color: #fff;
+  padding: 3rem;
 }
 /* second item section ends*/
-
 
 /* <!-- main section endss here --> */
 
 /* axia footer section starts here  */
-footer{
-    background: #1C293B;
-    color: #fff;
-    padding: 2rem 7rem !important;
-   
+footer {
+  background: #1c293b;
+  color: #fff;
+  padding: 2rem 7rem !important;
 }
-hr{
-    background: #fff;
-    color: #fff;
+hr {
+  background: #fff;
+  color: #fff;
 }
-.white-logo{
-    width: 8rem;
-    height: 8rem;
+.white-logo {
+  width: 8rem;
+  height: 8rem;
 }
 /* axia footer section starts here  */
+
+@media only screen and (min-width: 321px) and (max-width: 768px) {
+  nav {
+    height: 6rem;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    position: relative;
+  }
+  .meet-the-team-section {
+    padding-left: 1em !important;
+    padding-right: 1rem !important;
+    padding-bottom: 3rem;
+  }
+  .main-section {
+    background: #f4f4f5;
+    padding: 3rem 1rem !important;
+  }
+  .first-item {
+    padding: 2rem 1rem;
+  }
+  footer {
+    background: #1c293b;
+    color: #fff;
+    padding: 2rem 1rem !important;
+  }
+  .grid-container {
+    display: flex !important;
+    flex-direction: column !important;
+  }
+  div.row.meet-row {
+    display: flex !important;
+    flex-wrap: nowrap !important;
+  }
+  ul.navbar-nav.mr-auto {
+    display: flex !important;
+    flex-direction: row !important;
+    padding-bottom: 5rem;
+    justify-content: center;
+  }
+  .meet-the-team {
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .main-section {
+    padding: 0rem 0rem 2rem 0rem !important;
+    
+  }
+  .first-item {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+  }
+  nav {
+    height: 6rem;
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+    position: relative;
+  }
+  .grid-container{
+      margin-right: 1rem;
+      margin-left: 1rem;
+  }
+  .meet-the-team{
+      text-align: center;
+  }
+  footer{
+      padding: 1rem 1rem !important;
+  }
+  .nav-item a{
+       font-size: 1.5rem !important;
+}
+}
