--- a/index.css
+++ b/index.css
@@ -156,8 +156,9 @@ a#navbarDropdown.nav-link.dropdown-toggle {
   color: #1c293b;
 }
 .instru-content {
-  font-weight: 300 !important;
-  line-height: 1.9rem
+  font-weight: 200 !important;
+  line-height: 1.9rem;
+  font-size: 1.5vw;
 }
 
 .instru-row {
@@ -229,6 +230,14 @@ hr {
 /* axia footer section starts here  */
 
 @media only screen and (min-width: 321px) and (max-width: 768px) {
+.instru-content {
+  font-weight: 200 !important;
+  line-height: 1.4rem;
+  font-size: 4.5vw;
+}
+div.col-md-6.pr-5.axia-fund{
+    padding-right: 0px !important;
+}
   li.nav-item a {
     font-size: 0.8rem !important;
   }
@@ -382,11 +391,26 @@ hr {
 }
 
 @media only screen and (min-width: 767px) and (max-width: 1024px) {
+.crypto-heading{
+    font-size: 1.8rem;
+}
+    .instru-content {
+  font-weight: 200 !important;
+  line-height: 1.4rem;
+  font-size: 2.5vw;
+}
+div.col-md-6.pr-5.axia-fund{
+    padding-right: 0px !important;
+}
+.computer-img{
+    width: 90% !important;
+    height: 70% !important;
+}
   .computer-img-div {
     position: block !important;
     z-index: -1;
     top: 6rem;
-    left: 0rem !important;
+    right: 0rem !important;
   }
   ul.navbar-nav.mr-auto {
     background-color: rgb(44, 43, 43);
@@ -442,6 +466,11 @@ hr {
   }
 }
 @media only screen and (min-width: 1024px) and (max-width: 1366px) {
+    .instru-content {
+  font-weight: 200 !important;
+  line-height: 1.4rem;
+  font-size: 1.8vw;
+}
   .computer-img-div {
     position: block !important;
     z-index: -1;
